fixed spacing

--- a/assets/css/2010s.css
+++ b/assets/css/2010s.css
@@ -98,8 +98,7 @@ body {
 @keyframes box-story1 {
 	0% {left: 200px;}
 
-	50% {left: -200px;
-}
+	50% {left: -200px;}
 
 	100% {left: 200px;}
 }
@@ -169,8 +168,6 @@ body {
 	font-family: monospace;
 	background-color: white;
 	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-
-
 }
 
 .box-link img {
